--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,19 +1,185 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" />
-    <title>Cook Helper</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="This is a cook helper">
+    <meta name="author" content="">
+    <link rel="icon" href="../../../../favicon.ico">
+    <title>Cooking Helper | Home </title>
+    
+    <!--Template based on URL below-->
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.3/examples/starter-template/">
+
+    <!-- Bootstrap core CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <!-- Place your stylesheet here-->
+    <link href="css/index.css" rel="stylesheet">
 </head>
+
 <body>
-    <h1>Home page</h1>
-    <nav>
-        <div class="row">
-            <button onclick="window.location.href='/signup'" id = "signup">Sign up</button>
-            <button onclick="window.location.href='/login'" id = "login">Login</button>
+<!---Navigation bar-->
+<nav class="navbar navbar-expand-md navbar-custom justify-content-center sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="">
+    <img src="photos/logo.png" width="80" height="80" class="d-inline-block align-top" alt="Logo">
+    </a>
+    <button class="navbar-toggler ml-1" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse justify-content-between align-items-center w-100" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto text-center">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%=root%>/signup">Sign up</a>
+          </li>
+        <li class="nav-item">
+          <a class="nav-link" href="<%=root%>/login">Login</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+<br>
+<br>
+    
+<!---Image Slider-->
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+    <!--- <li data-target="#myCarousel" data-slide-to="2"></li>--->
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="photos/motivation.gif" alt="gif diy" >
+            <div class="carousel-caption">
+                <a href="#">SIGN UP NOW!</a>
+          </div>
         </div>
-    </nav>  
+        <div class="carousel-item ">
+            <img src="photos/header2.png" alt="header" > 
+        </div>
+        
+    <!-- Left and right controls -->
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+</div>
+    
+
+<!---section2--->
+ <div id="section2">
+                    <div class="row">
+                        <div class="col-md-6 how-img">
+                            <img src="photos/one.png" class="rounded-circle img-fluid" alt=""/>
+                        </div>
+                        <div class="col-md-6">
+                            <h4>Vitamins</h4>
+                             <p> Help shore up bones, heal wounds and balster your immune system.They also convert food into energy and repair cellular damage.</p>
+                            <p>Always promotes healthy and support normal growth,developement and ageing.It also help to reduces teh risk of chronic disease.</p>
+                                            
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <h4>Health</h4>
+                            <p>Better health is central to human happiness and well-being.It also makes an important contribution to economic progress.</p>
+                            <p>Helps to improve muscle strength and boost your endurance, hence delivers oxygen and nutrients to your tissue.</p>
+                        </div>
+                        <div class="col-md-6 how-img">
+                            <img src="photos/two.png"
+                                 class="rounded-circle img-fluid" alt=""/>
+                        </div>
+                    </div>
+
+                    
+    </div>
+<!-----jumbotron--->   
+    
+<div class="jumbotron jumbotron-fluid">
+  <div class="container">
+      <h1 class="display-7">About Us</h1>
+    <p>We believe health happens daily, minute by minute,step by step and to inspire your goals and support your progress.</p>
+      <p>We provide the expert guidance and daily tools which you need to make the best health choices,actively manage your food intake and live healtier lives every day</p>
+
+ </div>
+</div>
+    
+
+<!----Fixed Background----> 
+<figure>
+  <div class="fixed-wrap">
+    <div id="fixed">
+    </div>
+  </div>
+</figure>
+    
+<!------Footer----->
+<footer>
+ <div class="container-fluid padding">
+   <div class="row text-center">
+       <div class="col-md-4">
+          <img src="photos/logo.png">
+           <hr class="light">
+           <p>(07) 884 7863</p>
+           <p>cookhelper@yahoo.com</p>
+           <p>Lot 567 Jalan Kemuning</p>
+           <p>Bagan Selangor, 98856</p>
+       </div>
+       <div class="col-md-4">
+           <hr class="light">
+           <h5> Hotline Phone</h5> 
+           <hr class="light">
+           <p> Call : (09) 23422 00 </p>
+           <p> Fax  : (08) 12345 99 </p>
+       </div>
+       <div class="col-md-4">
+           <hr class="light">
+           <h5> Head Quaters</h5> 
+           <hr class="light">
+           <p> No 4 Tingkat 56</p>
+           <p> Bangunan Mustapha Kamal </p>
+           <p> 89990 Kuala Lumpuh</p>
+       </div>
+       <div class="col-12">
+        <hr class="light">
+        <h5 style="color: gainsboro;">&copy; <%=root%> </h5>
+       </div>
+   </div> 
+ </div>    
+</footer>
+
+
+     
+     
+     
+     
+     
+     
+     
+     
+     
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 </html>
