--- a/views/favorites.ejs
+++ b/views/favorites.ejs
@@ -6,6 +6,7 @@
 
 <h3 class = "center-align"><%=message%></h3>
 
+
 <section class="section">
     <div class="container">
         <div class="row">
@@ -13,7 +14,7 @@
                 <ul class="collection">
                     <% foods.forEach(function(food) {%>
                         <a class="collection-item avatar" href = "<%=root%>/user/food/<%=food._id%>">
-                            <img src="<%= food.photoLink %>" alt="<%= food.name %>" onclick="sendToRelevantPage('<%=food.id%>')" class="circle">
+                            <img src="<%= food.photoLink %>" alt="<%= food.name %>" class="circle">
                             <p class = "teal-text"><strong><%= food.name.toUpperCase() %></strong></p>
                             <span style="color: #9e9e9e;" class = "title">Category: <%= food.category %></span>
                         
@@ -32,6 +33,7 @@
       function sendToRelevantPage(id){
             location.href = `<%=root%>/user/food/${id}`;
       }
+      
       
 </script>
 <script src="<%=root%>/js/favorites.js"></script>
